# fastapi-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  setup.cfg
.github/workflows/: cache.yml  tests.yml
alembic/: env.py
alembic/versions/: 205b24e0fcd6_create_user.py  b16c37aff1fd_create_user.py
api/: __init__.py  error_codes.py  exceptions.py  routers.py  urls.py
api/auth/: routers.py  schemas.py
api/dependensies/: authorizations.py
api/errors/: __init__.py  codes.py  exceptions.py  handlers.py
api/services/: base_router.py  dto.py  handlers.py  security.py
api/services/dependencies/: __init__.py  authorization.py  session.py
api/test/: urls.py
api/v1/: routers.py
api/v1/auth/: __init__.py  routers.py  schemas.py  services.py  views.py
core/: __init__.py  config.py  db.py  gunicorn.conf.py  gunicort.conf.py  lifespan.py  redis.py  settings.py
db/: session.py
db/models/: __init__.py  user.py
db/queries/: user.py
docker/: .dockerignore  Dockerfile  docker-entrypoint.sh
models/: user.py
src/: settings.py
tests/: alembic_test.py  conftest.py  test_first.py
tests/auth/: test_login.py  test_signup.py
web/: main.py  pyproject.toml
web/api/: urls.py
web/api/auth/: routers.py  services.py
web/core/: config.py
web/migrations/models/: 0_20221218164810_init.py
web/models/: user.py
