[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fast-api-template-project"
version = "0.1.0"
description = ""
license = "MIT"
authors = [
    {name = "Nazarii"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "~=8.3"
pytest-mock = "~=3.14"
pytest-cov = "~=6.1"
pytest-asyncio = "~=0.26"
black = "~=25.1"
isort = "~=6.0"
freezegun = "~=1.5"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "~=23.0"

[tool.black]
line-length = 120
extend-exclude = "versions"
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
skip = ["versions", "venv"]
line_length = 120
include_trailing_comma = true
profile = "black"
known_third_party = "celery"

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
addopts = "-v -s -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore"
norecursedirs = ["docs", "build"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
