[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template with JWT authentication, async PostgreSQL, and Alembic migrations"
license = "MIT"
authors = [
    {name = "Nazarii"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi ~=0.116",
    "alembic ~=1.16",
    "sqlalchemy ~=2.0",
    "pydantic[email] ~=2.11",
    "pydantic-settings ~=2.9",
    "uvicorn[standard] ~=0.35",
    "asyncpg ~=0.30.0",
    "python-jose ~=3.5",
    "cryptography ~=44.0",
    "passlib[bcrypt] ~=1.7",
    "python-multipart ~=0.0.20",
    "python-slugify ~=8.0",
    "httpx ~=0.28"
]

[project.optional-dependencies]
dev = [
    "pytest ~=8.4",
    "pytest-mock ~=3.14",
    "pytest-cov ~=6.2",
    "pytest-asyncio ~=1.1",
    "black ~=25.1",
    "isort ~=6.0",
    "freezegun ~=1.5"
]
prod = [
    "gunicorn ~=23.0"
]

[tool.poetry]
package-mode = false


[tool.black]
line-length = 120
extend-exclude = "versions"
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
skip = ["versions", "venv"]
line_length = 120
include_trailing_comma = true
profile = "black"
known_third_party = "celery"

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
addopts = "-v -s -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore"
norecursedirs = ["docs", "build"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
